задание по HTML

--- a/src/index.html
+++ b/src/index.html
@@ -3,5 +3,13 @@
     <head>
         <title>HTML</title>
     </head>
-    <body></body>
+    <body>
+        <h1>Заголовок первого уровня</h1>
+        <h2>Заголовок первого уровня</h2>
+        <ol>
+            <li><a href="https://www.youtube.com">ссылка1</a></li>
+            <li><a href="https://github.com">ссылка2</a></li>
+            <li><a href="https://py.checkio.org">ссылка3</a></li>
+        </ol>
+    </body>
 </html>
